<resources>
    <string name="app_name">MyTrainer</string>

    <!-- Main activity -->
    <string name="welcome">MyTrainer</string>
    <string name="loginFacebook">Login with Facebook</string>
    <string name="loginGmail">Login with Google</string>

    <!-- -->
    <string name="respect">Hai il mio rispetto</string>
    <string name="thx">Grazie :=)</string>


    <!-- Toolbar strings-->
    <string name="search_title">Search</string>


    <!-- Navigation menu strings-->
    <string name="profile">Profile</string>
    <string name="current_schedule">Current Schedule</string>
    <string name="schedule_history">Schedule History</string>
    <string name="request_schedule">Request Schedule</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="clean">Pulisci cache</string>

    <!--Sono due stati del navigation view: open and close -->
    <string name="view_navigation_open">Open</string>
    <string name="view_navigation_close">Close</string>


    <!-- Navigation header-->
    <string name="myTrainer">My Trainer</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>

    <string name="switch_to_athlete">Switch to Athlete</string>
    <string name="switch_to_trainer">Switch to Trainer</string>
    <string name="switch_to_admin">Switch to Admin</string>


    <!-- Auth credentials -->
    <string name="google_id">571297470512–0chmgeusgvtk1mqrmdn6r74iprprkm4i.apps.googleusercontent.com</string>
    <string name="facebook_app_id">635913786878813</string>
    <string name="fb_login_protocol_scheme">fb635913786878813</string>
    <string name="telegram_public_key">-----BEGIN PUBLIC KEY-----
MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAqRgNSmpNFoObfgYj3CFm
foqqj6k/fzyOnVo1x4Cq+K1NPcNADrD1gjhPM1MHcBXEb5MmmJNtWb8zoRb+tYkN
qVGZJCUwySDvIsSAqrEcfwYIrfap9y0uT4y3dU8atYxXQWCT8nq5th58JBy40C6M
cU76Tu0963PDqO+yNeYVt9mdV9c8uWdNJJMNUOMUcf7pcR0Z7t+5XiRPCD8WIqDe
pjn7J/0uQOJrw2Egq0zkUCIaztdJFRzCFCFYxpC+Ly3xvhXAVEuLStnk8hsYosdP
JtfRTQnx1ITICjMHsKaGvpTo/t3HFL97x9vBl2s7cuWIJqH/Rvt88YW3eGpiC+ty
qwIDAQAB
-----END PUBLIC KEY-----
</string>

    <string name="check_login">Verificando le credenziali…</string>
    <string name="init_db">Inizializzando il database…</string>
    <string name="fase_db">Fase %d su %d in corso…</string>
    <string name="joke">Attendere ancora qualche istante…</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Profile fieds -->
    <string name="profileFieldSurname">Surname:</string>
    <string name="profileFieldName">Name:</string>
    <string name="profileFieldUserType">User type:</string>

    <!--Schedule History Fields -->
    <string name="scheduleHistoryFieldStartDate">Start Date:</string>
    <string name="scheduleHistoryFieldTrainer">Trainer:</string>
    <string name="scheduleHistoryFieldScheduleName">Schedule name:</string>
    <string name="send_request_new_schedule">Send Request New Schedule</string>

    <!-- Admin section -->
    <string name="admin_all">Gestisci gli utenti</string>
    <string name="update_to_trainer">Cambia in Trainer</string>
    <string name="update_to_admin">Cambia in Admin</string>
    <string name="update_to_athlete">Cambia in Athlete</string>


    <string name="schedule_info">Inserisci informazioni aggiuntive sulla scheda</string>
    <string name="pending_requests">Richieste pendenti</string>

    <string name="view_profile">Visualizza profilo</string>
    <string name="create_schedule">Crea scheda</string>

    <!-- Help field -->
    <string name="name1">Ivan Lamperti</string>
    <string name="email1">ilamperti@studenti.uninsubria.it</string>
    <string name="studentId1">730654</string>
    <string name="name2">Anatoliy Roshka</string>
    <string name="email2">aroshka@studenti.uninsubria.it</string>
    <string name="studentId2">730662</string>

    <string name="create_with_day">Inserisci il numero dei giorni</string>
    <string name="cancel">Annulla</string>

    <string name="error_input">Errore in inserimento</string>
    <string name="schedule_days">La scheda deve avere almeno un giorno!</string>

    <string name="request_athlete">Atleta: %s</string>
    <string name="request_info">Informazioni aggiuntive: %s</string>
    <string name="input_exercise_series">Inserisci il numero di serie</string>
    <string name="input_exercise_reps">Inserisci il numero di ripetizioni</string>
    <string name="input_exercise_recovery_time">Inserisci il tempo di recupero (in secondi)</string>
    <string name="add_exercise">Aggiungi esercizio</string>


</resources>
