<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/profileItem"
        android:icon="@drawable/clipboard_account_outline"
        android:orderInCategory="1"
        android:title="@string/profile" />

    <group
        android:id="@+id/schedule"
        android:checkableBehavior="single">

        <item
            android:id="@+id/currentScheduleItem"
            android:icon="@drawable/account_badge_outline"
            android:orderInCategory="2"
            android:title="@string/current_schedule" />

        <item
            android:id="@+id/scheduleHistoryItem"
            android:icon="@drawable/account_badge_horizontal_outline"
            android:orderInCategory="3"
            android:title="@string/schedule_history" />

        <item
            android:id="@+id/requestScheduleItem"
            android:icon="@drawable/account_badge_alert_outline"
            android:orderInCategory="4"
            android:title="@string/request_schedule" />

    </group>

    <group
        android:id="@+id/settings"
        android:checkableBehavior="single">
        <item
            android:id="@+id/helpItem"
            android:icon="@drawable/help_circle_outline"
            android:orderInCategory="5"
            android:title="@string/help" />

        <item
            android:id="@+id/logoutItem"
            android:icon="@drawable/exit_to_app"
            android:orderInCategory="6"
            android:title="@string/logout" />

        <item
            android:id="@+id/cleanItem"
            android:orderInCategory="7"
            android:title="@string/clean" />

    </group>

    <group
        android:id="@+id/switchProfile"
        android:checkableBehavior="single" />

</menu>