<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/profileItem"
        android:icon="@drawable/clipboard_account_outline"
        android:orderInCategory="1"
        android:title="@string/profile" />

    <group
        android:id="@+id/requests"
        android:checkableBehavior="single">
        <item
            android:id="@+id/pendingScheduleRequest"
            android:orderInCategory="2"
            android:title="@string/pending_requests" />
        <item
            android:id="@+id/createSchedule"
            android:orderInCategory="3"
            android:title="@string/create_schedule" />

    </group>

    <group
        android:id="@+id/settings"
        android:checkableBehavior="single">
        <item
            android:id="@+id/helpItem"
            android:icon="@drawable/help_circle_outline"
            android:orderInCategory="4"
            android:title="@string/help" />

        <item
            android:id="@+id/logoutItem"
            android:icon="@drawable/exit_to_app"
            android:orderInCategory="5"
            android:title="@string/logout" />

        <item
            android:id="@+id/cleanItem"
            android:orderInCategory="6"
            android:title="@string/clean" />

    </group>

    <group
        android:id="@+id/switchProfile"
        android:checkableBehavior="single" />

</menu>