<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/name1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="39dp"
                android:layout_marginTop="264dp"
                android:layout_marginEnd="40dp"
                android:text="@string/name1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/email1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="39dp"
                android:layout_marginTop="56dp"
                android:layout_marginEnd="40dp"
                android:autoLink="email"
                android:text="@string/email1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name1" />

            <TextView
                android:id="@+id/studentId1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="39dp"
                android:layout_marginTop="68dp"
                android:layout_marginEnd="40dp"
                android:text="@string/studentId1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email1" />
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="0.5">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/titleApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="39dp"
                android:layout_marginTop="152dp"
                android:layout_marginEnd="31dp"
                android:text="@string/myTrainer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/name2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="39dp"
                android:layout_marginTop="264dp"
                android:layout_marginEnd="40dp"
                android:text="@string/name2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/email2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="39dp"
                android:layout_marginTop="56dp"
                android:layout_marginEnd="40dp"
                android:autoLink="email"
                android:text="@string/email2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name2" />

            <TextView
                android:id="@+id/studentId2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="39dp"
                android:layout_marginTop="68dp"
                android:layout_marginEnd="40dp"
                android:text="@string/studentId2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email2" />
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>

</LinearLayout>